--- a/src/stylesheets/base/_fontface.scss
+++ b/src/stylesheets/base/_fontface.scss
@@ -24,3 +24,6 @@
 
 
 @include font-face('the citizens',fonts/the_citizens/the_citizens-webfont, normal, normal);
+
+@include font-face('adam',fonts/adam/adam-cg_pro-webfont, normal, normal);
+
