--- a/src/stylesheets/helpers/_colors.scss
+++ b/src/stylesheets/helpers/_colors.scss
@@ -2,4 +2,4 @@ $black     : #121212;
 $white     : #FEFEFE;
 $yellow    : #FFF056;
 $purple    : #2b063d;
-$blue      : #4A569D;
+$blue      : #9298fe;
