--- a/src/stylesheets/base/_typography.scss
+++ b/src/stylesheets/base/_typography.scss
@@ -1,9 +1,13 @@
 body {
-  font-family: 'aileron', sans-serif;
-  font-weight: 400;
+  font-family: 'adam', sans-serif;
+  font-weight: normal;
   font-size: 16px;
   color: $white;
   overflow-x: hidden;
+  letter-spacing: 0.4rem;
 
-  
+  button{
+    font-family: 'adam', sans-serif;
+    font-weight: normal;
+  }
 }
