--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -1,86 +1,104 @@
+$offset : 2.5vw;
+
 #home {
   width: 100vw;
   height: 100vh;
+  background-color: $black;
 
-  .list-container {
-
-    position:absolute;
-    top:50vh;
-    transform:translateY(-50%);
-    left:10vw;
-
-    .title {
+  .title {
+      position: absolute;
+      z-index: 10;
       overflow: visible;  
+      position: absolute;
+      top: $offset;
+      left: $offset;
 
       h1 {
         color:$white;
-        font-size: 4rem;
+        font-size: 2.2rem;
+
         font-weight: 900;
         display: block;
-        background-image: url('/static/img/bg/fire.png');
-        background-repeat: no-repeat;
-        background-size: 150% 150%;
-        -webkit-background-clip: text;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
-        text-fill-color: transparent;
-        background-color: $purple;
-        -webkit-animation: animatedBackground 20s ease infinite;
-        -moz-animation: animatedBackground 20s ease infinite;
-        animation: animatedBackground 20s ease infinite; 
+        line-height: 1.5rem;
 
         strong{
           font-weight: normal;
-          font-size: 5rem;
+          font-size: 2.2rem;
           vertical-align: baseline;
-          line-height: 5rem;
-          letter-spacing: 0.2rem;
+          letter-spacing: 1rem;
+          line-height: 3rem;
           text-transform: uppercase;
           font-weight: 900;
           // font-family: 'the citizens', 'aileron', Helvetica, sans-serif;
         }
         
-        span {
-          letter-spacing: 3.4rem;
-        } 
-
         small {
           vertical-align: top;
           padding-top: 0.5rem;
-          font-size: 0.8rem;
+          font-size: 0.6rem;
           font-weight: 800;
           letter-spacing: 0.7rem;
-          word-spacing: 2rem;
           text-transform: uppercase;
         }
 
       }
-      
-      h2 {
-        padding-top: 0.5rem;
-        font-size: 1.2rem;
-        font-weight: 400;
-        letter-spacing: 0.7rem;
-        text-transform: uppercase;
 
-        span {
-          letter-spacing: 1.08rem;
-        }
-        
-      }
+  }
+
+  .about{
+    position: absolute;
+    z-index: 10;
+    overflow: visible;  
+    position: absolute;
+    top: $offset;
+    right: $offset;
+    font-size: 0.8rem;
+    line-height: 1rem;
+    cursor: pointer;
+    transition: 0.3s all ease;
+
+    &:hover{
+      color:$blue;
     }
+  }
+
+  .list-container {
+
+    position:absolute;
+    z-index:10;
+    top:50vh;
+    transform:translateY(-50%);
+    right:$offset;
+
+    
 
     .projects{
       font-weight: 800;
       text-transform: uppercase;
-      color:$black;
+      color:$white;
+      width:27vw;
+
+      &:first-child{
+        padding-bottom: 1rem;
+      }
+
+      h2{
+        width: auto;
+        text-align: right;
+        font-size: 0.8rem;
+        color: darken($white, 50);
+        padding-bottom: 5px;
+        // border-bottom: 2px solid #FFF;
+        margin-bottom: 1rem;
+        margin-right: 0;
+      }
 
       ul{
-        width:50vw;
 
         li.projects__item{
           position:relative;
-          padding:2rem 0;
+          text-align: right;
+          padding:0.2rem 0;
           transition:0.3s all ease;
 
           p.name{
@@ -89,27 +107,35 @@
             width:100%;
             font-size: 1rem;
             font-weight: 800;
-            letter-spacing: 1rem;
+            letter-spacing: 0.4rem;
             z-index: 1;
+            transition: 0.2s all ease;
 
 
-            &:after, &:before{
+            &::after, &::before{
+              content: '';
+              position: absolute;
+              right: 0px;
+              top:1px;
+              width:0px;
+              height: 2px;
+              background-color: $blue;
+              top:0.5em;
+              margin-top: -1px;
               opacity: 0;
-              transition: 0.2s all ease;
+              z-index: 10;
+              -webkit-transition: all .2s cubic-bezier(0,0,.6,1);
+              transition: all .2s cubic-bezier(0,0,.6,1);
             }
-
+  
           }
           .technos{
             display: inline-block;
-            position: absolute;
-            color: $white;
+            color: $blue;
             opacity: 0;
-            left:-3rem;
-            font-weight: 600;
-            top:1rem;
-            font-size: 5rem;
+            font-size: 0.8rem;
+            line-height:3rem;
             transition: 0.2s all ease;
-
           }
 
           &:hover, &.active{
@@ -117,28 +143,21 @@
             margin-left: 5px;
 
             .technos {
-              opacity: 0.2;
+              opacity: 0.7;
+              padding-right:20px;
+
             }
 
             .name {
-              color:#FF0000;
+              color:$blue;
+              padding-right:20px;
 
-              &[data-text]:after, &[data-text]:before{
-                content: attr(data-text);
-                position: absolute;
-                left: 1px;
-                top:1px;
-                color: $white;
-                top:0rem;
-                opacity: 0.7;
-                z-index: 0;
+
+              &::after{
+                width:10px;
+                opacity: 1;
               }
               
-              &[data-text]:before{
-                left: 2px;
-                top:1px;
-                color: #0000FF;
-              }
 
             }
 
@@ -150,19 +169,108 @@
   }
 
   .display-project {
+    position: absolute;
+    z-index: 0;
     float: right;
     display: block;
     width: 100vw;
     height: 100vh;
-    background-repeat: repeat;
     background-size: cover;
-    transition: 0.3s all ease; 
+    background-position: center;
+    transition: 1s all ease; 
+  }
+
+  .project-infos {
+    transition: 0.5s all ease; 
+    &__description{
+      position: absolute;
+      z-index: 20;
+      width:30vw;
+      text-align: left;
+      line-height: 1.5rem;
+      left: $offset;
+      bottom: $offset;
+      font-size:0.7rem;
+      letter-spacing:0.2rem;
+      transition: 0.5s all ease; 
+    }
+
+    &__button{
+      position: absolute;
+      z-index: 20;
+      bottom: $offset;
+      left:50vw;
+      transform: translateX(-50%);
+      box-sizing:border-box;
+      width: 300px;
+      font-size: 0.7rem;
+      background: none;
+      color: $white;
+      padding: 15px;
+      letter-spacing:0.3rem;
+      border:0;
+      line-height:20px;
+      text-align: center;
+      vertical-align: middle;
+      cursor: pointer;
+      transition: 0.5s all ease; 
+
+        
+      svg {
+        height: 50px;
+        left: 0;
+        position: absolute;
+        top: 0; 
+        width: 100%; 
+      }
+      
+      rect {
+        fill: none;
+        stroke: $white;
+        stroke-width: 3;
+        stroke-dasharray: 490, 0;
+        transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+
+      }
+
+
+      &:hover {
+
+        color: $blue;
+        
+        rect {
+          stroke: $blue;
+          stroke-width: 10;
+          stroke-dasharray: 45, 485;
+          stroke-dashoffset: 50;
+          transition: all 1.35s cubic-bezier(0.19, 1, 0.22, 1);
+        }
+      }
+    }
+
+  }
+
+  .mask{
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    // background-image: url('/static/img/bg/mask.png');
+    background: -moz-radial-gradient(center, circle cover, rgba(61,61,61,0.36) 0%, rgba(0,0,0,0.98) 55%, rgba(0,0,0,1) 67%); /* FF3.6-15 */
+    background: -webkit-radial-gradient(center, circle cover, rgba(61,61,61,0.36) 0%,rgba(0,0,0,0.98) 55%,rgba(0,0,0,1) 67%); /* Chrome10-25,Safari5.1-6 */
+    background: radial-gradient(circle at center, rgba(61,61,61,0.36) 0%,rgba(0,0,0,0.98) 55%,rgba(0,0,0,1) 67%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5c3d3d3d', endColorstr='#000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    background-repeat: no-repeat;
+    background-size: 200%;
 
   }
 
   #project {
-        width:100vw;
-        height: 100vh;
-      }
+    width:100vw;
+    height: 100vh;
+  }
 
 }
